# filegoblin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PRD.md  README.md  UX.md  build.rs  gobbled_output.md  justfile  my_unified_code.md  test_list.rs  test_pii.md
.agents/workflows/: cli_design.md  qa_test.md  web_crawler_architecture.md
.cargo/: config.toml
docs/: ADR.md  advanced_curation_research_prompt.md  advanced_curation_spec.md
docs/agent_context/: Filegoblin CLI Tool Tech Spec Research.md  Filegoblin_ LLM Ingestion CLI Research.md  HANDOFF.md  QA_PROMPT.md  Rust PII Redaction Engine Research.md  Rust Web Crawler Architecture Deep Dive.md  google_oauth_research_prompt.md  implementation_plan.md  redation_extra_info.md  task.md  twitter_oauth_research_prompt.md  walkthrough.md  youtube_research_prompt.md
examples/: dummy_plugin.wasm  vision_test.rs  windows_vision_test.rs
examples/dummy_plugin/: Cargo.toml
examples/dummy_plugin/src/: lib.rs
src/: cli.rs  cost.rs  curation.rs  flavors.rs  lib.rs  main.rs  privacy_shield.rs  ui.rs
src/compressor/: heuristic.rs  level1.rs  level2.rs  level3.rs  mod.rs  tests.rs
src/parsers/: code.rs  crawler.rs  credentials.rs  gemini_share.rs  github.rs  gobble.rs  google.rs  mod.rs  ocr.rs  office.rs  pdf.rs  powerpoint.rs  sheet.rs  twitter.rs  wasm.rs  web.rs  youtube.rs
test_assets/: dummy.csv  dummy.pptx
wit/: gobbler.wit
