[package]
name = "filegoblin"
version = "1.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
colored = "3.1.1"
dashmap = "6.1.0"
docx-rs = "0.4.19"
governor = "0.10.4"
html2md = "0.2.15"
ignore = "0.4.25"
nonzero_ext = "0.3.0"
oxidize-pdf = "1.7.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
robotxt = "0.6.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tree-sitter = { version = "0.26.5", features = ["std"] }
tree-sitter-rust = "0.24.0"
url = "2.5.8"
wasmtime = "41.0.3"

[build-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
tokio = "1.49.0"
