[package]
name = "filegoblin"
version = "1.5.0"
edition = "2024"
description = "A zero-dependency, high-performance CLI tool to convert messy file formats into high-fidelity, LLM-optimized Markdown/XML/YAML."
repository = "https://github.com/funkyfunc/filegoblin"
license = "MIT"
exclude = [
    "examples/*",
    "docs/*",
    "test_assets/*",
    "assets/*",
    ".github/*",
    "empty_test_dir/*"
]

[workspace]
members = ["examples/dummy_plugin"]

[dependencies]
aho-corasick = { version = "1.1.4", features = ["perf-literal", "std"] }
anyhow = "1.0.102"
arboard = "3.6.1"
calamine = "0.33.0"
candle-core = { version = "0.9", features = ["mkl"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
colored = "3.1.1"
crossterm = "0.29.0"
csv = "1.4.0"
dashmap = "6.1.0"
docx-rs = "0.4.19"
fst = { version = "0.4.7", features = ["levenshtein"] }
governor = "0.10.4"
home = "0.5.12"
html2md = "0.2.15"
ignore = "0.4.25"
image = "0.25.9"
logos = "0.16.1"
memmap2 = "0.9"
minify-html = "0.18.1"
nojson = "0.3.8"
nonzero_ext = "0.3.0"
ocrs = "0.12.1"
open = "5.3.3"
oxidize-pdf = "1.7.1"
pulldown-cmark = "0.13.1"
pulldown-cmark-to-cmark = "22.0.0"
quick-xml = "0.39.2"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
robotxt = "0.6.1"
rten = "0.24.0"
rten-tensor = "0.24.0"
safetensors = "0.4"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sliding_features = "7.1"
stop-words = "0.10.0"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tree-sitter = { version = "0.26.5", features = ["std"] }
tree-sitter-rust = "0.24.0"
url = "2.5.8"
wasmtime = { version = "41.0.3", features = ["component-model"] }
wasmtime-wasi = "42.0.0"
zip = "8.1.0"

[build-dependencies]
cc = "1.0"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
tokio = "1.49.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-vision = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Media_Ocr", "Storage", "Graphics_Imaging", "Foundation", "Storage_Streams"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
